# Py-obfuscator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  obf.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
tests/: __init__.py  test_obfuscator.py
